--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ authors = [
     {name = "Geo Kim", email = "geokim120209@gmail.com"},
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "ipykernel>=6.29.5",
+]
 readme = "README.md"
 license = {text = "MIT"}
 
