--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "jinja2>=3.1.6",
 ]
 readme = "README.md"
 license = {text = "MIT"}
