--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
     "jinja2>=3.1.6",
+    "pillow>=11.2.1",
 ]
 readme = "README.md"
 license = {text = "MIT"}
