--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install jinja2==3.1.2 pygments==2.15.1 markupsafe
+          pip install jinja2==3.1.2 pygments==2.15.1 markupsafe pillow
           
       - name: Generate site
         run: python web/generate_site.py
