--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .crap
+.specstory
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,vim,python,visualstudiocode,jupyternotebooks,rust,rust-analyzer,virtualenv,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,vim,python,visualstudiocode,jupyternotebooks,rust,rust-analyzer,virtualenv,node
